# WebServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/ClientSocket/: ClientSocket.cpp  ClientSocket.h
src/Enums/: HTTPMethods.cpp  HTTPMethods.h  HTTPStatus.cpp  HTTPStatus.h  HTTPVersions.cpp  HTTPVersions.h
src/FileSystem/: FileSystem.cpp  FileSystem.h
src/HTTPRequest/: HTTPRequest.cpp  HTTPRequest.h
src/HTTPServer/: HTTPServer.cpp  HTTPServer.h
src/Responses/FileResponse/: FileResponse.cpp  FileResponse.h
src/Responses/HTMLResponse/: HTMLResponse.cpp  HTMLResponse.h
src/Responses/HTTPResponse/: HTTPResponse.cpp  HTTPResponse.h
src/Router/: Router.cpp  Router.h
src/TCPSocket/: TCPSocket.cpp  TCPSocket.h
static/js/: Game.js  index.js  load_module.js
static/wasm/: Game.wasm
templates/: aboba.html  game.html  index.html  main.html
